# ml_in_prod_hw1

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
lib/: settings.py  types.py
lib/applications/: features.py  metric.py  model.py  plot.py
logs/: metric_log.csv
