[tool.poetry]
name = "mfti-ml-prod-no1"
version = "0.1.0"
description = ""
authors = ["aichumakova <chumana.mmrx@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faststream = {extras = ["rabbit"], version = "^0.5.33"}
scikit-learn = "^1.6.0"
plotly = "^5.24.1"
loguru = "^0.7.3"
pydantic-settings = "^2.7.0"
pandas = "^2.2.3"
kaleido = "1.0.0rc0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
